# distributed-chess

./: README.md
chess/: .gitignore  build  bun.lockb  package.json
chess/proto/: game.proto
chess/src/app/: layout.tsx  page.tsx
chess/src/app/lobby/: page.tsx
chess/src/app/play/: page.tsx
chess/src/pb/: game.ts  query.ts
core/: Cargo.toml  build.rs
core/proto/: game.proto  query.proto
core/src/: chess.rs  errors.rs  main.rs
core/src/consensus/: hotstuff.rs  mod.rs  types.rs
core/src/network/: backend.rs  mod.rs  p2p.rs  state.rs  utils.rs
