[package]
name = "core"
author = "sodamntired"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.8.4"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.58"
clap = { version = "4.0.22", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.25"
libp2p = { version = "0.43.0", features = ["kad", "tcp-tokio"] }
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = { version = "0.1.15" }
tracing = { default-features = false, features = ["log"], version = "0.1.37" }
tracing-subscriber = { default-features = false, features = [
    "fmt",
    "tracing-log",
    "env-filter",
], version = "0.3.16" }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["preserve_order"] }
rand = "0.8.5"
hex = "0.4.3"
libsecp256k1 = "0.7"
once_cell = "1.17.1"
tonic = { version = "0.8.3", features = ["tls", "transport", "tls-roots"] }
tower-http = { version = "0.4.0", features = ["cors"] }
listenfd = "1.0.1"
prost = "0.11.8"
tonic-web = "0.5"
sha2 = "0.10.6"
alloy-primitives = { version = "0.7.7", features = ["serde"] }
chrono = { version = "*", features = ["serde"] }
